--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.11",
     "openmeteo": "^1.2.3"
   }
